--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/ds-auth"]
 	path = lib/ds-auth
 	url = https://github.com/nexusdev/ds-auth
+[submodule "lib/ds-actor"]
+	path = lib/ds-actor
+	url = https://github.com/nexusdev/ds-actor
